# C_arm_X_ray_calibration

./: CMakeLists.txt  README.md  calibration.cpp
